tests/ui/const-generics/unknown_adt.rs
fn main() {
    let _: UnknownStruct<7>;
    //~^ ERROR cannot find type `UnknownStruct`
}
